--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-react": "^6.24.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-router-dom": "^4.3.1",
     "react-waypoint": "^8.0.3",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
